--- a/mscore/inspector/inspector_image.ui
+++ b/mscore/inspector/inspector_image.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>287</width>
+    <width>382</width>
     <height>180</height>
    </rect>
   </property>
@@ -17,7 +17,16 @@
    <property name="spacing">
     <number>0</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -68,20 +77,13 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
-      <widget class="QLabel" name="label_4">
-       <property name="text">
-        <string>Lock Aspect Ratio</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="3">
       <widget class="QToolButton" name="resetAutoscale">
        <property name="text">
         <string>...</string>
        </property>
        <property name="icon">
-        <iconset resource="musescore.qrc">
+        <iconset resource="../musescore.qrc">
          <normaloff>:/data/icons/resetproperty.png</normaloff>:/data/icons/resetproperty.png</iconset>
        </property>
        <property name="iconSize">
@@ -137,7 +139,7 @@
      <item row="3" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Scale:</string>
+        <string>Scale</string>
        </property>
       </widget>
      </item>
@@ -197,20 +199,13 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="label_5">
-       <property name="text">
-        <string>Size in Spatium Units</string>
-       </property>
-      </widget>
-     </item>
      <item row="4" column="3">
       <widget class="QToolButton" name="resetLockAspectRatio">
        <property name="text">
         <string>...</string>
        </property>
        <property name="icon">
-        <iconset resource="musescore.qrc">
+        <iconset resource="../musescore.qrc">
          <normaloff>:/data/icons/resetproperty.png</normaloff>:/data/icons/resetproperty.png</iconset>
        </property>
        <property name="iconSize">
@@ -227,7 +222,7 @@
         <string>...</string>
        </property>
        <property name="icon">
-        <iconset resource="musescore.qrc">
+        <iconset resource="../musescore.qrc">
          <normaloff>:/data/icons/resetproperty.png</normaloff>:/data/icons/resetproperty.png</iconset>
        </property>
        <property name="iconSize">
@@ -238,17 +233,17 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="1" colspan="2">
-      <widget class="QCheckBox" name="sizeIsSpatium">
+     <item row="4" column="0" colspan="3">
+      <widget class="QCheckBox" name="lockAspectRatio">
        <property name="text">
-        <string/>
+        <string>Lock Aspect Ratio</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="1" colspan="2">
-      <widget class="QCheckBox" name="lockAspectRatio">
+     <item row="5" column="0" colspan="3">
+      <widget class="QCheckBox" name="sizeIsSpatium">
        <property name="text">
-        <string/>
+        <string>Size in Spatium Units</string>
        </property>
       </widget>
      </item>
@@ -257,7 +252,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="musescore.qrc"/>
+  <include location="../musescore.qrc"/>
  </resources>
  <connections/>
 </ui>
