--- a/mscore/inspector/inspector_rest.ui
+++ b/mscore/inspector/inspector_rest.ui
@@ -17,7 +17,16 @@
    <property name="spacing">
     <number>0</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -54,7 +63,7 @@
      <property name="spacing">
       <number>0</number>
      </property>
-     <item row="0" column="3">
+     <item row="0" column="2">
       <widget class="QToolButton" name="resetSmall">
        <property name="toolTip">
         <string>reset value</string>
@@ -63,7 +72,7 @@
         <string>...</string>
        </property>
        <property name="icon">
-        <iconset resource="musescore.qrc">
+        <iconset resource="../musescore.qrc">
          <normaloff>:/data/icons/resetproperty.png</normaloff>:/data/icons/resetproperty.png</iconset>
        </property>
        <property name="iconSize">
@@ -74,15 +83,8 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1" colspan="2">
+     <item row="0" column="0" colspan="2">
       <widget class="QCheckBox" name="small">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label">
        <property name="text">
         <string>Small</string>
        </property>
@@ -93,7 +95,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="musescore.qrc"/>
+  <include location="../musescore.qrc"/>
  </resources>
  <connections/>
 </ui>
